# Advanced-Programming-1-ex3

./: .gitignore  README.md
Client_Side/: CLI.cpp  CLI.h  CMakeLists.txt  Communication.cpp  Communication.h  main.cpp  output
Client_Side/Commands/: ChangeParameters.cpp  ChangeParameters.h  ClassifyFile.cpp  ClassifyFile.h  Command.cpp  Command.h  EndInteraction.cpp  EndInteraction.h  GetClassifications.cpp  GetClassifications.h  GetConfusionMatrix.cpp  GetConfusionMatrix.h  ReceiveClassificationFile.cpp  ReceiveClassificationFile.h  SendClassificationFile.cpp  SendClassificationFile.h  ShowClassifications.cpp  ShowClassifications.h  ShowConfusionMatrix.cpp  ShowConfusionMatrix.h  UploadFile.cpp  UploadFile.h
Client_Side/IO/: DefaultIO.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server Side/: CLI.cpp  CLI.h  CMakeLists.txt  ChangeParameters.cpp  ChebyshevMetric.cpp  ChebyshevMetric.h  Command.cpp  Command.h  Communication.cpp  Communication.h  DefaultIO.cpp  DefaultIO.h  EuclideanMetric.cpp  EuclideanMetric.h  FileHandler.cpp  FileHandler.h  Flower.cpp  Flower.h  ManhattanMetric.cpp  ManhattanMetric.h  Measurable.cpp  Measurable.h  MeasurableList.h  Metric.cpp  Metric.h  UploadFile.cpp  UploadFile.h  main.cpp  output
Server Side/Commands/: ChangeParameters.cpp  ChangeParameters.h  ClassifyFile.cpp  ClassifyFile.h  Command.cpp  Command.h  EndInteraction.cpp  EndInteraction.h  SendClassificationFile.cpp  SendClassificationFile.h  ShowClassifications.cpp  ShowClassifications.h  ShowConfusionMatrix.cpp  ShowConfusionMatrix.h  UploadFile.cpp  UploadFile.h
Server Side/IO/: DefaultIO.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server Side/KNN Algorithm/: FileHandler.cpp  FileHandler.h  Measurable.cpp  Measurable.h  MeasurableList.cpp  MeasurableList.h
Server Side/Metrics/: ChebyshevMetric.cpp  ChebyshevMetric.h  EuclideanMetric.cpp  EuclideanMetric.h  ManhattanMetric.cpp  ManhattanMetric.h  Metric.cpp  Metric.h
